--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flow Rate Calculator</title>
+    <title>CPAP Calculator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Flow Rate Calculator</h2>
+        <h2>CPAP Calculator</h2>
         <label for="fio2">FiO2 (%)</label>
         <input type="number" id="fio2" placeholder="Enter FiO2 value" />
 
