--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             color: white;
             border: none;
             cursor: pointer;
+            display: block;
+            margin: 0 auto;
         }
         button:hover {
             background-color: #45a049;
