--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             border: none;
             cursor: pointer;
             display: block;
-            margin: 0 auto;
+            margin: 1 auto;
         }
         button:hover {
             background-color: #45a049;
@@ -73,6 +73,12 @@
                 return;
             }            
 
+             // Hiển thị cảnh báo nếu FiO2 > 80%
+            const warningMessage = document.getElementById('warningMessage');
+            if (fio2 > 80) {
+                warningMessage.textContent = "Warning: FiO2 value should not exceed 80%!";
+            } 
+            
             // Công thức tính Air Flow và Oxy Flow
             const airFlow = totalFlow - ((fio2 * totalFlow - 21 * totalFlow) / 79);
             const oxyFlow = totalFlow - airFlow;
