--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         <a href="#" onclick="showETT()">ETT Size</a>
     </div>
     
+<div id="main">
+    <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>    
+    
     <div id="contentCPAP" class="container active">
         <h2>CPAP Calculator</h2>
         <label for="fio2">FiO2 (%)</label>
