--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p id="oxyFlow">Oxy Flow: </p>
         </div>
         <div id="warningMessage" class="warning"></div>
-        
+
         <h3>Áp lực CPAP tương ứng với lưu lượng khi áp dụng cho van Benveniste</h3>
         <table>
             <thead>
@@ -169,7 +169,7 @@
                 </tr>
             </tbody>
         </table>
-        
+    </div>   
     <div id="contentETT" class="container">
         <h2>ETT Size Calculator</h2>
         <p>Here you can calculate ETT size. This section will be developed.</p>
