--- a/index.html
+++ b/index.html
@@ -165,6 +165,41 @@
         table th {
             background-color: #f2f2f2;
         }
+
+       /* Làm mờ nội dung khi sidebar mở */
+        .blur-background {
+            filter: blur(5px);
+        }
+
+        /* Media query cho màn hình nhỏ */
+        @media (max-width: 768px) {
+            .sidebar {
+                top: 0;
+                height: 100%;
+                z-index: 300;
+            }
+            
+            #main {
+                margin-left: 0; /* Không đẩy nội dung khi sidebar mở */
+            }
+
+            /* Làm mờ nội dung phía sau sidebar khi mở */
+            body.sidebar-open #main {
+                filter: blur(5px);
+                background-color: rgba(0, 0, 0, 0.3); /* Hiệu ứng tối màu */
+            }
+        }
+
+        /* Media query cho màn hình lớn */
+        @media (min-width: 769px) {
+            .sidebar {
+                top: 50px; /* Sidebar vẫn dưới header */
+            }
+
+            body.sidebar-open #main {
+                margin-left: 250px; /* Đẩy nội dung khi sidebar mở */
+            }
+		    }
     </style>
 </head>
 <body>
