--- a/index.html
+++ b/index.html
@@ -168,29 +168,24 @@
 
        /* Làm mờ nội dung khi sidebar mở */
         .blur-background {
-            filter: blur(5px);
+            filter: blur(3px);
         }
 
         /* Media query cho màn hình nhỏ */
        @media (max-width: 768px) {            
        /* Làm mờ nội dung phía sau sidebar khi mở */
        body.sidebar-open #main {
-         margin-left: 0px;  /* Không đẩy nội dung khi sidebar mở */
-         filter: blur(5px);
+         filter:filter(3px);
          background-color: rgba(0, 0, 0, 0.2); /* Hiệu ứng tối màu */
         }
        }
 
         /* Media query cho màn hình lớn */
         @media (min-width: 769px) {
-            .sidebar {
-                top: 50px; /* Sidebar vẫn dưới header */
-            }
-
             body.sidebar-open #main {
                 margin-left: 250px; /* Đẩy nội dung khi sidebar mở */
             }
-		    }
+	 }
     </style>
 </head>
 <body>
