--- a/index.html
+++ b/index.html
@@ -177,17 +177,14 @@
          filter:blur(3px);
          background-color: rgba(0, 0, 0, 0.3); /* Hiệu ứng tối màu */
         }
-      .sidebar {
-	 z-index: 300;
-       }
       }
 
-        /* Media query cho màn hình lớn */
+        /* Media query cho màn hình lớn 
         @media (min-width: 769px) {
             body.sidebar-open #main {
-                margin-left: 250px; /* Đẩy nội dung khi sidebar mở */
+                margin-left: 250px; /* Đẩy nội dung khi sidebar mở 
             }
-	 }
+	 } */
     </style>
 </head>
 <body>
