--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
          filter:blur(3px);
          background-color: rgba(0, 0, 0, 0.3); /* Hiệu ứng tối màu */
         }
+       .sidebar -open {
+         left: 0; /* Khi mở sidebar, nó sẽ trượt vào màn hình */
+        }
       }
 
         /* Media query cho màn hình lớn 
