--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         }
 
         /* Media query cho màn hình nhỏ */
-       @media (max-width: 768px) {            
+       @media only screen and (max-width: 768px) {            
        body.sidebar-open #main {
          filter:blur(3px);
          background-color: rgba(0, 0, 0, 0.3); /* Hiệu ứng tối màu */
