--- a/index.html
+++ b/index.html
@@ -177,17 +177,10 @@
          filter:blur(3px);
          background-color: rgba(0, 0, 0, 0.3); /* Hiệu ứng tối màu */
         }
-       .sidebar-open {
-         left: 0; /* Khi mở sidebar, nó sẽ trượt vào màn hình */
+       .main.sidebar-open {
+         margin-left: 0; /* Khi mở sidebar, nó sẽ trượt vào màn hình */
         }
       }
-
-        /* Media query cho màn hình lớn 
-        @media (min-width: 769px) {
-            body.sidebar-open #main {
-                margin-left: 250px; /* Đẩy nội dung khi sidebar mở 
-            }
-	 } */
     </style>
 </head>
 <body>
