--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>ICU Tools</title>
     <link rel="icon" href="icon.png" type="image/png">
     <style>
@@ -12,6 +13,10 @@
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
+        }
+	    
+        body, .sidebar {
+          font-family: 'Inter', sans-serif;
         }
 
         .header {
