--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
     <link rel="icon" href="icon.png" type="image/png">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Inter', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
-        }
-	    
-        body, .sidebar {
-          font-family: 'Inter', sans-serif;
-        }
+	}
 
         .header {
             position: fixed;
@@ -253,7 +249,7 @@
 
     <div id="mySidebar" class="sidebar">
         <a href="#">CPAP Calculator</a>
-        <a href="#">ETT Size</a>
+        <a href="ett.html">ETT Size</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
