--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
     </div>
 
     <div id="mySidebar" class="sidebar">
-        <a href="cpap.html">CPAP Calculator</a>
-        <a href="ett.html">ETT Size</a>
+        <a href="javascript:void(0)" onclick="loadPage('cpap.html')">CPAP Calculator</a>
+        <a href="javascript:void(0)" onclick="loadPage('ett.html')">ETT Size</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
