--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
         .sidebar a:hover {
             background-color: #575757;
         }
-
+	    
+        .sidebar a.selected {
+           background-color: #007bff;
+           color: white;
+        font-weight: bold;
+        }
+	    
         .close-btn:hover {
             color: red;
         }
