--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
     </div>
 
     <div id="mySidebar" class="sidebar">
-        <a id="item1" href="javascript:void(0)" onclick="loadPage('cpap.html')">CPAP Calculator</a>
-        <a id="item2" href="javascript:void(0)" onclick="loadPage('ett.html')">ETT Size</a>
+        <a id="item1" href="javascript:void(0)" onclick="loadPage('cpap.html'); highlightSelected('item1');">CPAP Calculator</a>
+        <a id="item2" href="javascript:void(0)" onclick="loadPage('ett.html'); highlightSelected('item2');">ETT Size</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
