--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     </style>
 </head>
-<body onload="loadPage('cpap.html')">
+<body onload="loadPage('cpap.html'); highlightSelected('item1');">
 
     <div class="header">
         <div class="icon-container" onclick="toggleSidebar()">
