--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
         }
 	    
         .sidebar a.selected {
-           background-color: #007bff;
+           background-color: #cce7ff;
            color: white;
-        font-weight: bold;
+           font-weight: bold;
+	  border-left: 4px solid #007bff;
         }
 	    
         .close-btn:hover {
