--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
         }
 	    
         .sidebar a.selected {
-           background-color: #cce7ff;
+           background-color: #E0E0E0;
            color: white;
            font-weight: bold;
-	  border-left: 4px solid #007bff;
         }
 	    
         .close-btn:hover {
