--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 	    
         .sidebar a.selected {
-           background-color: #E0E0E0;
+           background-color: rgba(0, 0, 0, 0.3);;
            color: white;
            font-weight: bold;
         }
