--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 	    
         .sidebar a.selected {
-           background-color: rgba(0, 0, 0, 0.3);;
+           background-color: #6A9C89;
            color: white;
            font-weight: bold;
         }
