--- a/ett.html
+++ b/ett.html
@@ -62,6 +62,27 @@
             <p id="ettSize">ETT Size: </p>
             <p id="depth">Độ sâu nội khí quản: </p>
         </div>
+
+        <div class="description">
+            <h3>MÔ TẢ</h3>
+
+            <h4>Kích cỡ ống nội khí quản</h4>
+            <p>Kích cỡ (hay đường kính [mm]) ống nội khí quản phù hợp giúp làm hạn chế sự tổn thương đường thở do ống nội khí quản gây ra, đảm bảo thông khí và tránh rò rỉ khí. Kích cỡ ống nội khí quản ở trẻ em thay đổi theo độ tuổi và được ước tính dựa vào các công thức sau:</p>
+            <ul>
+                <li>Kích cỡ ống nội khí quản không bóng chèn = (tuổi theo năm / 4) + 4</li>
+                <li>Kích cỡ ống nội khí quản có bóng chèn = (tuổi theo năm / 4) + 3.5</li>
+            </ul>
+            <p>Theo kinh điển, ống nội khí quản có bóng chèn được ưu tiên cho trẻ > 8 tuổi và người lớn. Hiện nay, AHA khuyến cáo ưu tiên ống nội khí quản có bóng chèn (Cuff) cho mọi lứa tuổi.</p>
+
+            <h4>Độ sâu của ống nội khí quản</h4>
+            <ul>
+                <li>Độ sâu được tính từ cung răng (răng cửa) hay khóe miệng.</li>
+                <li>Độ sâu ống nội khí quản ước tính ở trẻ em (cm) = kích cỡ ống nội khí quản x 3.</li>
+                <li>Ở người lớn, nam giới: 22 - 23 cm.</li>
+                <li>Ở người lớn, nữ giới: 20 - 21 cm.</li>
+                <li>Ở người lớn, trường hợp đặt nội khí quản qua đường mũi + thêm 3 đến 4 cm.</li>
+            </ul>
+        </div>
     </div>
 <script src="script.js"></script>
 </body>
