--- a/cpap.html
+++ b/cpap.html
@@ -10,8 +10,9 @@
         <h2>CPAP Calculator</h2>
         
         <label for="fio2">FiO2 (%)</label>
-        <input type="number" id="fio2" placeholder="Enter FiO2 value" />
-
+        <input type="number" id="fio2" min="21" max="100" required placeholder="Enter FiO2 value" />
+        <small style="display: block; font-size: 10px;">FiO2 phải nằm trong khoảng từ 21 đến 100%</small>
+        
         <label for="totalFlow">Total Flow (L/min)</label>
         <input type="number" id="totalFlow" placeholder="Enter Total Flow" />
 
