--- a/cpap.html
+++ b/cpap.html
@@ -9,14 +9,17 @@
     <div class="container">
         <h2>CPAP Calculator</h2>
         
-        <label for="fio2">FiO2 (%)</label>
-        <input type="number" id="fio2" min="21" max="100" required placeholder="Enter FiO2 value" />
-        <small style="display: block; font-size: 10px;">FiO2 phải nằm trong khoảng từ 21 đến 100%</small>
-        
-        <label for="totalFlow">Total Flow (L/min)</label>
-        <input type="number" id="totalFlow" placeholder="Enter Total Flow" />
+        <form id="cpapForm" onsubmit="return validateFiO2AndCalculateFlow()">
+          <label for="fio2">FiO2 (%)</label>
+          <input type="number" id="fio2" min="21" max="100" required placeholder="Enter FiO2 value" />
+          <small style="display: block; font-size: 10px;">FiO2 phải nằm trong khoảng từ 21 đến 100%</small>
+          <br />
 
-        <button onclick="calculateFlow()">Calculate</button>
+          <label for="totalFlow">Total Flow (L/min)</label>
+          <input type="number" id="totalFlow" required placeholder="Enter Total Flow" />
+          <br />
+          <button type="submit">Calculate</button>
+        </form>
 
         <div class="result">
             <p id="airFlow">Air Flow: </p>
