--- a/cpap.html
+++ b/cpap.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h2>CPAP Calculator</h2>
         
-        <form id="cpapForm" onsubmit="return validateFiO2AndCalculateFlow()">
+        <form id="cpapForm" onsubmit="return validateFiO2()">
           <label for="fio2">FiO2 (%)</label>
           <input type="number" id="fio2" min="21" max="100" required placeholder="Enter FiO2 value" />
           <small style="display: block; font-size: 10px;">FiO2 phải nằm trong khoảng từ 21 đến 100%</small>
