--- a/index.html
+++ b/index.html
@@ -127,6 +127,35 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
+       .container_of_ett {
+	    display: flex;
+	    justify-content: center;
+	    align-items: flex-start;
+	    gap: 20px;
+	    margin: 0 auto;
+	    max-width: 1200px; /* Giới hạn độ rộng */
+	    padding: 20px;
+	}
+	.description-box {
+	    max-width: 700px;
+	    flex: 1;
+	    background-color: #f8f9fa;
+	    padding: 20px;
+	    border-radius: 10px;
+	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	  }
+	
+	.calculation-box {
+	    max-width: 350px;
+	    flex: 1;
+	    background-color: #ffffff;
+	    padding: 20px;
+	    border-radius: 10px;
+	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	    display: flex;
+	    flex-direction: column;
+	    gap: 8px; /* Thêm khoảng cách giữa các phần tử */
+	}
         input, button {
             width: calc(100% - 20px);
             padding: 10px;
@@ -173,59 +202,67 @@
             background-color: #f2f2f2;
         }
 
-        /* Sidebar: khi kích thước màn hình nhỏ */
 @media only screen and (max-width: 768px) {
    .overlay {
-    position: fixed;
-    top: 50px; /* Phía dưới thanh header */
-    left: 0;
-    width: 100%;
-    height: calc(100% - 50px);
-    background-color: rgba(0, 0, 0, 0.5); /* Màu tối */
-    z-index: 150;
-    display: none; /* Ban đầu không hiển thị */
-    transition: 0.5s;
-}
+	    position: fixed;
+	    top: 50px; /* Phía dưới thanh header */
+	    left: 0;
+	    width: 100%;
+	    height: calc(100% - 50px);
+	    background-color: rgba(0, 0, 0, 0.5); /* Màu tối */
+	    z-index: 150;
+	    display: none; /* Ban đầu không hiển thị */
+	    transition: 0.5s;
+    }
 
-/* Khi sidebar mở thì overlay xuất hiện */
-.sidebar-open #myOverlay {
-    display: block;
-} 
+	.sidebar-open #myOverlay {
+	    display: block;
+	} 
+	
 	.sidebar {
-        width: 250px; /* Đặt chiều rộng cố định */
-        position: fixed;
-        top: 50px; /* Vẫn nằm dưới thanh header */
-        left: -250px; /* Bắt đầu ẩn ở ngoài màn hình */
-        transition: left 0.3s ease; /* Hiệu ứng trượt */
+	        width: 250px; /* Đặt chiều rộng cố định */
+	        position: fixed;
+	        top: 50px; /* Vẫn nằm dưới thanh header */
+	        left: -250px; /* Bắt đầu ẩn ở ngoài màn hình */
+	        transition: left 0.3s ease; /* Hiệu ứng trượt */
+    	}
+
+	    body.sidebar-open .sidebar {
+	        left: 0; /* Trượt vào màn hình */
+	    }
+	
+	    #main {
+	        margin-left: 0; 
+	    }
+    .container_of_ett {
+      flex-direction: column;
+      align-items: center;
     }
 
-    /* Khi sidebar mở, nó trượt vào */
-    body.sidebar-open .sidebar {
-        left: 0; /* Trượt vào màn hình */
+    .calculation-box {
+      order: 1;
     }
 
-    /* Đảm bảo phần chính không bị đẩy */
-    #main {
-        margin-left: 0; /* Không thay đổi vị trí khi sidebar mở */
-    }
-}
-
-/* Đối với màn hình lớn hơn, sidebar vẫn sẽ đẩy nội dung */
-@media only screen and (min-width: 769px) {
-    .sidebar {
-        width: 0;
-        left: 0;
-    }
-
-    body.sidebar-open .sidebar {
-        width: 250px; /* Sidebar sẽ đẩy nội dung sang phải */
-    }
-
-    body.sidebar-open #main {
-        margin-left: 250px;
+    .description-box {
+      order: 2;
     }
 }
 
+	/* Đối với màn hình lớn hơn, sidebar vẫn sẽ đẩy nội dung */
+	@media only screen and (min-width: 769px) {
+	    .sidebar {
+	        width: 0;
+	        left: 0;
+	    }
+	
+	    body.sidebar-open .sidebar {
+	        width: 250px; /* Sidebar sẽ đẩy nội dung sang phải */
+	    }
+	
+	    body.sidebar-open #main {
+	        margin-left: 250px;
+	    }
+	}
     </style>
 </head>
 <body onload="loadPage('cpap.html'); highlightSelected('item1');">
