--- a/ett.html
+++ b/ett.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container_of_ett">
         <div class="description-box">
             <h3>MÔ TẢ</h3>
 
