--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 	    padding: 20px;
 	    border-radius: 10px;
 	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            line-height: 1.6; /* Dãn cách dòng */
 	  }
 	
 	.calculation-box {
