--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 	    border-radius: 10px;
 	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             line-height: 1.6; /* Dãn cách dòng */
+	    text-align: justify;
 	  }
 	
 	.calculation-box {
