--- a/ett.html
+++ b/ett.html
@@ -10,7 +10,21 @@
             margin-bottom: 10px;
             font-weight: bold;
         }
-	    
+        .box-header {
+            background-color: #444;
+            color: white;
+            font-size: 1.1em;
+            padding: 8px;
+            border-radius: 10px 10px 0 0;
+        }
+
+        .box-content {
+            padding: 8px;
+            font-size: 1.2em;
+            border: 1px solid #ddd;
+            border-top: none;
+            border-radius: 0 0 10px 10px;
+        }
 	.result_container {
 	    max-width: 350px;
 	    flex: 1;
