--- a/ett.html
+++ b/ett.html
@@ -67,7 +67,7 @@
             </ul>
         </div>
 
-	<div class="calculation-box">
+	<div class="calculation-box" id="formBox">
 	  <h2>ETT Size Calculator</h2>
 		<form id="ettForm" onsubmit="calculateETT(); return false;">
 			<label for="age">Tuổi</label>
