--- a/ett.html
+++ b/ett.html
@@ -79,7 +79,7 @@
 		</form>
 	</div>
 	<div class="result_container" id="resultBoxes">
-		<!-- Phần kết quả được ẩn ban đầu -->
+		<h2>ETT Size for a child of <span id="age"></span> years old</h2>
 			<div class="box">
 				<div class="box-header">Predicted Uncuffed Tube Size</div>
 				<div class="box-content"><span id="ettWithoutCuff"></span></div>
