--- a/ett.html
+++ b/ett.html
@@ -70,8 +70,8 @@
 	<div class="calculation-box" id="formBox">
 	  <h2>ETT Size Calculator</h2>
 		<form id="ettForm" onsubmit="calculateETT(); return false;">
-			<label for="age">Tuổi</label>
-			<input type="number" id="age" min="1" max="12" required placeholder="Nhập tuổi" />
+			<label for="ageInput">Tuổi</label>
+			<input type="number" id="ageInput" min="1" max="12" required placeholder="Nhập tuổi" />
 			<small style="display: block; font-size: 10px; color: #6c757d; margin-top: -6px;">Input range: 1 - 12</small>
 			<br />
 
