--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
     <div id="mySidebar" class="sidebar">
         <a id="item1" href="javascript:void(0)" onclick="loadPage('cpap.html'); highlightSelected('item1');">CPAP Calculator</a>
         <a id="item2" href="javascript:void(0)" onclick="loadPage('ett.html'); highlightSelected('item2');">ETT Size</a>
+        <a id="item3" href="javascript:void(0)" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
