--- a/bmi.html
+++ b/bmi.html
@@ -95,6 +95,7 @@
                 <div id="resultBoxBMI" style="display: none;">
                     <div class="result-item">
                         <div id="bmi-output"></div>
+                        <span>Body Mass Index (<div id="bmiCategory-output"></div>)</span>
                     </div>
                     <div class="result-item">
                         <div id="bsa-output"></div>
