--- a/bmi.html
+++ b/bmi.html
@@ -70,7 +70,8 @@
     }
 </style>
   <body>
-        <div class="container">
+    <div class="container_of_ett">
+        <div class="calculation-box" id="formBox">
             <h2>BMI & BSA Calculator (Body Mass Index and Body Surface Area)</h2>
 
             <form id="bmi-form">
@@ -103,7 +104,8 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+      <div class="description-box">
             <div class="formula-section">
                 <h3>Formulas</h3>
                 <p>BMI (kg/m<sup>2</sup>) = weight (kg) / (height (m))<sup>2</sup></p>
@@ -147,6 +149,7 @@
                     </tbody>
                 </table>
             </div>
+          </div>
         </div>
 
     <script src="script.js"></script>
